--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,31 +10,44 @@
       height: 650px;">
     <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
         <br>
-        <div align="center">
-            <div class="col-md-5">
-                <form action="#" th:action="@{/booking}" method="get">
-                    <div class="form-group">
-                        <select class="custom-select mr-sm-2" name="stationFrom" required>
-                            <option value="">Select Departure Station</option>
-                            <option th:each="station : ${stations}" th:value="${station.id}"
-                                    th:text="${station.name}"></option>
-                        </select>
+        <form action="#" th:action="@{/booking}" method="get">
+            <div align="center">
 
-                    </div>
+                <div class="col-4" >
+            <div class="card-transparent "  style="background-color: rgba(245, 245, 245, 0.7); border-radius:10px;">
+                <h5 class="card-header" th:text="#{booking.header}"></h5>
+                <i class="far fa-calendar"></i>
+                <div class="card-body" >
+                    <p class="card-text" >
                     <div class="form-group">
-                        <select class="custom-select mr-sm-2" name="stationTo" required>
-                            <option value="">Select Arrival Station</option>
+                        <select class="form-select mr-sm-2" name="stationFrom" required>
+                            <option value="" th:text="#{select.departure}"></option>
                             <option th:each="station : ${stations}" th:value="${station.id}"
                                     th:text="${station.name}"></option>
                         </select>
+                    </div>
+                    </p>
+                    <p class="card-text">
+                    <div class="form-group">
+                        <select class="form-select mr-sm-2" name="stationTo" required>
+                            <option value="" th:text="#{select.arrival}"></option>
+                            <option th:each="station : ${stations}" th:value="${station.id}"
+                                    th:text="${station.name}"></option>
                         </select>
                     </div>
+                    </p>
+                    <div align="center">
                     <p th:if="${sameStations}" class="error">Chosen station are same</p>
                     <p th:if="${noStations}" class="error">There are no routes for your stations</p>
-                    <button type="submit" class="btn btn-dark" value="Search">Search</button>
-                </form>
+                    <button type="submit" class="btn btn-success btn-rounded" value="Search"><i class="fas fa-search"></i></button>
+                    </div>
+                </div>
+
             </div>
+
         </div>
+        </form>
+    </div>
     </div>
 </div>
 <!-- Footer Start -->
