--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -15,10 +15,10 @@
                         <div class="row justify-content-center">
                             <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+                                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4" th:text="#{login.header}"></p>
                                 <form class="mx-1 mx-md-4" action="#" th:action="@{/register}" th:object="${user}"
                                       method="post">
-                                    <span style="font-size: 60%" th:if="${#fields.hasErrors('*')}">
+                                    <span style="font-size: 60%; color:red;" th:if="${#fields.hasErrors('*')}">
                                         <p th:each="err : ${#fields.errors('*')}" th:text="${err}"></p>
                                     </span>
 
@@ -26,9 +26,9 @@
                                         <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
                                             <input type="text" id="form3Example1c" class="form-control"
-                                                   th:field="*{firstName}" placeholder="First Name"
+                                                   th:field="*{firstName}"
                                                    th:errorclass="is-invalid"/>
-                                            <label class="form-label" for="form3Example1c">First Name</label>
+                                            <label class="form-label" for="form3Example1c" th:text="#{label.register.first}"></label>
                                         </div>
                                     </div>
 
@@ -36,9 +36,9 @@
                                         <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
                                             <input type="text" id="form3Example2c" class="form-control"
-                                                   th:field="*{lastName}" placeholder="Last Name"
+                                                   th:field="*{lastName}"
                                                    th:errorclass="is-invalid">
-                                            <label class="form-label" for="form3Example1c">Last Name</label>
+                                            <label class="form-label" for="form3Example1c" th:text="#{label.register.last}"></label>
                                         </div>
                                     </div>
 
@@ -46,8 +46,8 @@
                                         <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
                                             <input type="email" id="form3Example3c" class="form-control"
-                                                   th:field="*{email}" placeholder="Email" th:errorclass="is-invalid">
-                                            <label class="form-label" for="form3Example3c">Your Email</label>
+                                                   th:field="*{email}" th:errorclass="is-invalid">
+                                            <label class="form-label" for="form3Example3c" th:text="#{label.login.email}"></label>
                                         </div>
                                     </div>
 
@@ -55,9 +55,9 @@
                                         <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
                                             <input type="password" id="form3Example4c" class="form-control"
-                                                   th:field="*{password}" placeholder="Password"
+                                                   th:field="*{password}"
                                                    th:errorclass="is-invalid">
-                                            <label class="form-label" for="form3Example4c">Password</label>
+                                            <label class="form-label" for="form3Example4c" th:text="#{label.login.password}"></label>
                                         </div>
                                     </div>
 
@@ -65,24 +65,28 @@
                                         <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
                                             <input type="password" id="form3Example4cd" class="form-control"
-                                                   th:field="*{verifyPassword}" placeholder="Retype password"
+                                                   th:field="*{verifyPassword}"
                                                    th:errorclass="is-invalid">
-                                            <label class="form-label" for="form3Example4cd">Repeat your password</label>
+                                            <label class="form-label" for="form3Example4cd" th:text="#{label.register.repeat.pass}"></label>
                                         </div>
                                     </div>
 
                                     <div class="form-check d-flex justify-content-center mb-5">
                                         <input class="form-check-input me-2" type="checkbox" value=""
                                                id="form2Example3c"/>
-                                        <label class="form-check-label" for="form2Example3">
-                                            I agree all statements in <a href="#!">Terms of service</a>
+                                        <label class="form-check-label" for="form2Example3c" th:text="#{register.rules}  + ' ' + #{register.terms}">
                                         </label>
                                     </div>
 
-                                    <a href="login" class="text-center">I already have an Account</a>
+                                    <div align="center">
+
+                                        <a th:href="@{/login}" class="text-black-50 fw-bold" th:text="#{register.already.exist}">
+                                        </a>
+                                    </div>
+
 
                                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                                        <button type="submit" class="btn btn-dark">Register</button>
+                                        <button type="submit" class="btn btn-dark btn-lg" th:text="#{register.post}"></button>
                                     </div>
 
                                 </form>
