--- a/src/main/resources/templates/admin/stations/station_edit.html
+++ b/src/main/resources/templates/admin/stations/station_edit.html
@@ -15,9 +15,9 @@
                   method="POST">
                 <br>
                 <div class="row d-flex justify-content-center">
-                    <div class="alert alert-danger" th:if="${#fields.hasErrors('*')}">
-                        <p th:each="err : ${#fields.errors('*')}" th:text="${err}"></p>
-                    </div>
+                    <span style="font-size: 70%; color:yellow;" th:if="${#fields.hasErrors('*')}">
+                                        <p th:each="err : ${#fields.errors('*')}" th:text="${err}"></p>
+                                    </span>
                     <td class="row">
                         <div class="col-md-4">
                             <div class="card-transparent ">
