--- a/src/main/resources/templates/admin/users/user_edit.html
+++ b/src/main/resources/templates/admin/users/user_edit.html
@@ -12,9 +12,9 @@
         <form action="#" th:action="@{/users/admin/{id}/edit(id=${user.id})}" th:object="${user}" method="POST">
             <br>
             <div class="row d-flex justify-content-center">
-                <div class="alert alert-danger" th:if="${#fields.hasErrors('*')}">
-                    <p th:each="err : ${#fields.errors('*')}" th:text="${err}"></p>
-                </div>
+                 <span style="font-size: 60%; color:red;" th:if="${#fields.hasErrors('*')}">
+                                        <p th:each="err : ${#fields.errors('*')}" th:text="${err}"></p>
+                                    </span>
                 <td class="row">
                     <div class="col-md-4">
                         <div class="card-transparent">
@@ -47,6 +47,7 @@
                                             th:text="${role}">
                                     </option>
                                 </select>
+                                <br>
                                 <div align="center">
                                     <div class="col-4">
                                         <button type="submit" class="btn btn-success btn-rounded" th:text="#{button.update}"></button>
