--- a/src/main/resources/templates/customer/booking_form.html
+++ b/src/main/resources/templates/customer/booking_form.html
@@ -1,56 +1,83 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <div th:replace="fragments/head :: head"></div>
+
 <body>
 <div th:replace="fragments/header :: header"></div>
+
 <div class="p-5 text-center bg-image"
      style="background-image: url('/images/background.jpg');
-      height: 800px;">
+      height: 700px;">
     <div class="mask" style="background-color: rgba(0, 0, 0, 0.7);">
-        <div class="opacity-80">
-            <form action="#" th:action="@{/booking/form/order}" th:object="${data}" method="POST">
-                <br>
-                <div class="row d-flex justify-content-center">
-                    <div class="alert alert-danger" th:if="${#fields.hasErrors('*')}">
-                        <p th:each="err : ${#fields.errors('*')}" th:text="${err}"></p>
-                    </div>
-                    <td class="row">
-                        <div class="col-md-3">
-                                <label class="order-form-label">Your First Name*</label>
-                            </div>
-                        <div class="input-group mb-3">
-                                <input type="text" class="form-control" th:field="*{firstName}" placeholder="First Name"
-                                       th:errorclass="is-invalid" required>
-                            </div>
-                        <div class="col-md-3">
-                            <label class="order-form-label">Your Last Name*</label>
-                        </div>
-                            <div class="input-group mb-3">
-                                <input type="text" class="form-control" th:field="*{lastName}" placeholder="Last Name"
-                                       th:errorclass="is-invalid" required>
-                            </div>
-                        <div class="col-md-3">
-                            <label class="order-form-label">Your wagon number*</label>
-                        </div>
-                            <div class="input-group mb-3">
-                                <select class="form-select" th:field="*{wagonNum}" id="dropDownList" required>
-                                    <option value="">Select Wagon*</option>
-                                    <option th:each="wagon : ${wagons}" th:value="${wagon.id}"
-                                            th:text="${wagon.id}"></option>
-                                </select>
-                            </div>
-                        <p style="color:red" th:if="${loginError}" class="error" th:text="'No places available in wagon # ' + ${wagonNum}"></p>
+        <div class="container h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-lg-12 col-xl-11">
+                    <div class="card text-black"
+                         style="background-color: rgba(245, 245, 245, 0.8); border-radius:10px;">
+                        <div class="card-body p-md-3">
+                            <div class="row justify-content-center">
+                                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                        <br>
-                            <div align="center">
-                                <div class="col-4">
-                                    <button type="submit" class="btn btn-success btn-rounded">Update</button>
+                                    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4"
+                                       th:text="#{booking.confirm.header}"></p>
+                                    <form class="mx-1 mx-md-4" action="#" th:action="@{/booking/form/order}"
+                                          th:object="${data}" method="POST">
+                                    <span style="font-size: 70%; color:white;" th:if="${#fields.hasErrors('*')}">
+                                        <p th:each="err : ${#fields.errors('*')}" th:text="${err}"></p>
+                                    </span>
+
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <input type="text" id="form3Example2c" class="form-control"
+                                                       th:field="*{firstName}"
+                                                       th:errorclass="is-invalid" required>
+                                                <label class="form-label" for="form3Example2c"
+                                                       th:text="#{label.register.first}"></label>
+                                            </div>
+                                        </div>
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <input type="text" id="form3Example1c" class="form-control"
+                                                       th:field="*{lastName}"
+                                                       th:errorclass="is-invalid" required>
+                                                <label class="form-label" for="form3Example1c"
+                                                       th:text="#{label.register.last}"></label>
+                                            </div>
+                                        </div>
+
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas train fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <select class="form-select" th:field="*{wagonNum}" id="dropDownList"
+                                                        required>
+                                                    <option value="">Select Wagon*</option>
+                                                    <option th:each="wagon : ${wagons}" th:value="${wagon.id}"
+                                                            th:text="${wagon.id}"></option>
+                                                </select>
+                                            </div>
+                                        </div>
+
+                                        <p style="color:red" th:if="${noPlace}" class="error"
+                                           th:text="#{booking.confirm.wagon.full}"></p>
+
+                                        <br>
+                                        <div align="center">
+                                            <div class="col-4">
+                                                <button type="submit" class="btn btn-success btn-rounded"
+                                                        th:text="#{button.booking.confirm}">
+                                                </button>
+                                            </div>
+                                        </div>
+                                    </form>
+
                                 </div>
                             </div>
                         </div>
-            </form>
-            </td>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
