--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -59,8 +59,8 @@
 
                 <a th:href="@{/?lang=uk}"><i class="flag flag-ukraine"></i></a>
 
-                <a class="navbar-brand">Welcome, Guest</a>
-                <a class="navbar-brand mt-2 mt-lg-0" th:href="@{/login}">
+                <a class="navbar-brand" th:text="#{nav.welcome.guest}">Welcome, Guest</a>
+                <a class="navbar-brand mt-2 mt-lg-0" th:href="@{/login}" >
                     <img
                             src=""
                             th:src="@{/images/guest-icon.jpg}"
@@ -71,13 +71,12 @@
                 </a>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" th:href="@{/register}">
+                        <a class="nav-link active" th:href="@{/register}" th:text="#{nav.register}">
                             REGISTER
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" th:href="@{/login}">
-                            LOGIN
+                        <a class="nav-link active" th:href="@{/login}" th:text="#{nav.login}">
                         </a>
                     </li>
                 </ul>
@@ -110,7 +109,7 @@
                     />
                 </a>
                 <a class="navbar-brand"
-                   th:text="Welcome + ', ' + ${#authentication.getPrincipal().getUser().getFirstName}"/> </a>
+                   th:text="#{nav.welcome} + ', ' + ${#authentication.getPrincipal().getUser().getFirstName} + '!'"/> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -118,13 +117,13 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" th:href="@{/index}">Home</a>
+                            <a class="nav-link active" aria-current="page" th:href="@{/index}" th:text="#{nav.home}"></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" th:href="@{/abouts-us}" th:text="#{nav.about-us}"></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" th:href="@{/tickets/show}">My tickets</a>
+                            <a class="nav-link active" aria-current="page" th:href="@{/tickets/show}" th:text="#{customer.tickets}"></a>
                         </li>
                     </ul>
                 </div>
@@ -160,7 +159,7 @@
                                th:href="@{/users/about}"></a>
                         </li>
                         <li>
-                            <a class="dropdown-item" th:href="@{/logout}" th:text="#{nav.user.logout}">Logout</a>
+                            <a class="dropdown-item" th:href="@{/logout}" th:text="#{nav.user.logout}"></a>
                         </li>
                     </ul>
                 </div>
@@ -200,7 +199,7 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" th:href="@{/index}">Home</a>
+                            <a class="nav-link active" aria-current="page" th:href="@{/index}" th:text="#{nav.home}"></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" th:href="@{/abouts-us}" th:text="#{nav.about-us}"></a>
@@ -230,7 +229,7 @@
 
                 <a th:href="@{/?lang=uk}"><i class="flag flag-ukraine"></i></a>
 
-                <a class="navbar-brand">Welcome, ADMIN</a>
+                <a class="navbar-brand" th:text="#{nav.welcome.admin}"></a>
                 <!-- Avatar -->
                 <div class="dropdown">
                     <a
@@ -259,7 +258,7 @@
                             ></a>
                         </li>
                         <li>
-                            <a class="dropdown-item" th:href="@{/logout}">Logout</a>
+                            <a class="dropdown-item" th:href="@{/logout}" th:text="#{nav.user.logout}"></a>
                         </li>
                     </ul>
                 </div>
